Bug 1294102 - Use the original height that is not affected by the top to decide the button style on OSX. r=mstange, a=gchang